# fileship_up

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  gen_jwt.py
src/: db.rs  error.rs  main.rs
src/middleware/: jwt_auth.rs  mod.rs
src/routes/: mod.rs
src/services/: file_service.rs
